[tool.poetry]
name = "cef_logger"
version = "1.0.0"
description = "Simple Common Event Format logger"
readme = "README.md"
authors = ["Alexander Morokov <morocov.ap.muz@gmail.com>"]
repository = "https://github.com/delatars/cef_logger"

[tool.poetry.dependencies]
python = "^3.6"
pydantic = "^1.6.1"

[tool.poetry.dev-dependencies]
flake8 = "^3.7.9"
flake8-bugbear = "^20.1.4"
flake8-builtins = "^1.5.2"
flake8-debugger = "^3.2.1"
flake8-comprehensions = "^3.2.2"
flake8-isort = "^3.0.0"
flake8-logging-format = "^0.6.0"
flake8-mutable = "^1.2.0"
flake8-pep3101 = "^1.3.0"
flake8-print = "^3.1.4"
flake8-string-format = "^0.3.0"
flake8-quotes = "^3.0.0"
isort = "^4.3.21"
mypy = "^0.910"
pytest = "^5.4.1"
